# codesync

./: .gitignore  Cargo.toml  README.md  codesync_server.py  config.example.json
docs/superpowers/plans/: 2026-06-08-rust-gix-rewrite.md  2026-06-09-codesync-bugfix.md  2026-06-09-git2-backend-pivot.md
docs/superpowers/specs/: 2026-06-08-rust-gix-rewrite-design.md  2026-06-09-codesync-bugfix-design.md  2026-06-09-rust-git2-rewrite-design.md
src/: config.rs  credentials.rs  error.rs  git_backend.rs  http.rs  lib.rs  lock.rs  main.rs  sync.rs  webhook.rs
tests/: test_codesync_server.py
