[package]
name = "codesync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
fs4 = "1.1.0"
git2 = "0.21.0"
hmac = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
subtle = "2.6.1"
thiserror = "2.0.18"
tiny_http = "0.12.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
